Fixed issues with the z-index of popup for notifications/wishlist/saved articles being under the cards

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1371,3 +1371,7 @@ b {
 .text-no-wrap {
   white-space: nowrap;
 }
+
+.z-index-999999 {
+  z-index: 999999;
+}
